<resources>
    <string name="app_name">Tweeter</string>

    <string name="homePageTitle">Home</string>
    <string name="userImageContentDescription">The user\'s image</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_view_user">ViewUserActivity</string>
    <string name="loadingData">Loading More Data…</string>
    <string name="feedTabTitle">Feed</string>
    <string name="storyTabTitle">Story</string>
    <string name="followingTabTitle">Following</string>
    <string name="followersTabTitle">Followers</string>
    <string name="loginTabTitle">Login</string>
    <string name="registerTabTitle">Register</string>
    <string name="loginUsernameHint">\@username</string>
    <string name="loginPasswordHint">password</string>
    <string name="registerFirstNameHint">first name</string>
    <string name="registerLastNameHint">last name</string>
    <string name="loginButtonText">Login</string>
    <string name="registerButtonText">Register</string>
    <string name="takeProfilePicture">Take Profile Picture</string>
    <string name="follow_button">Follow</string>

    <string name="sampleAlias">"@UserAlias"</string>
    <string name="sampleMessage">This is a simple message</string>
    <string name="sampleTime">12:00pm March 15th</string>
    <string name="sampleUserName">The User</string>
    <string name="title_activity_login">Sign in</string>
    <string name="followeeCount">Following: %d</string>
    <string name="followerCount">Followers: %d</string>
    <string name="logout">Logout</string>
</resources>
