<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/registerFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:hint="@string/registerFirstNameHint"
        app:layout_constraintBottom_toTopOf="@id/registerLastName"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/registerLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:hint="@string/registerLastNameHint"
        app:layout_constraintBottom_toTopOf="@id/registerUsername"
        app:layout_constraintTop_toBottomOf="@+id/registerFirstName"/>

    <EditText
        android:id="@+id/registerUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:hint="@string/loginUsernameHint"
        app:layout_constraintBottom_toTopOf="@id/registerPassword"
        app:layout_constraintTop_toBottomOf="@+id/registerLastName"/>

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:hint="@string/loginPasswordHint"
        app:layout_constraintBottom_toTopOf="@id/pictureButton"
        app:layout_constraintTop_toBottomOf="@+id/registerUsername"/>

    <Button
        android:id="@+id/pictureButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/takeProfilePicture"
        app:layout_constraintTop_toBottomOf="@+id/registerPassword"
        app:layout_constraintBottom_toTopOf="@+id/registerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/registerButtonText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>