<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".view.main.mainFragments.FollowingFragment"
    android:background="@drawable/background_border"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sampleUserName"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/userAlias"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sampleAlias"
                    android:layout_margin="10dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/timeStamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sampleTime"
                android:textSize="10sp"
                android:layout_marginStart="10dp"/>

        </LinearLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/statusMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sampleMessage"
        android:layout_marginStart="50dp"
        android:padding="10dp"/>


</LinearLayout>